disk_cache: Disable automatic creation sequencing for {DISK,MEDIA}_CACHE

Network thread shutdown may sometimes leak entries in Cronet environment,
and blocking-forever further creation for that cache path is inappropriate.
Further, the feature is mostly meant for other kinds of caches, which
get destroyed and created repeatedly.

Bug: 761331
Change-Id: Id0edd1cb3bda41723ea159a02a0d92a661e3f6e4
Reviewed-on: https://chromium-review.googlesource.com/648286
Commit-Queue: Maks Orlovich <morlovich@chromium.org>
Reviewed-by: Josh Karlin <jkarlin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499715}
Former-commit-id: b802d1998785b72384bedf9a3e285602fe5a3869